--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			var map = new google.maps.Map(document.getElementById("map"), {
 			  center: {lat: 51.5256702, lng: -0.0875614},
 			  zoom: 16,
-			  mapTypeId: google.maps.MapTypeId.ROADMAP
+			  mapTypeId: google.maps.MapTypeId.ROADMAP,
+			  disableDefaultUI: true
 			});
 
 			getDirections(map);
