Fix hospital marker bug

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         draggable:false,
         animation: google.maps.Animation.DROP,
         position: position,
-        icon: "https://mail.google.com/mail/u/1/?ui=2&ik=5f1dd557d2&view=fimg&th=14e8c1dff22593c1&attid=0.1&disp=emb&realattid=14e8c1db3a0580d8faf1&attbid=ANGjdJ-yaTKcY3bpLpxlaYJgISqMqT1XzsjgTe_vl7UdpE6vV-AgRUfiOpSqVeK_PM5Foa6BHWZVNv3CbPsgCS4TrNokXKa1k-hgiEiTvhnqJK8ywB2FfwugLJ48B_g&sz=s0-l75-ft&ats=1436871852569&rm=14e8c1dff22593c1&zw&atsh=1"
+        icon: "unnamed.png"
     });
 		}
 
