--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Fruitmonsters">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
-
+	<link href="https://fontastic.s3.amazonaws.com/oN5BsuNjKX9ATMYd8V3hJc/icons.css" rel="stylesheet">
 
 
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=geometry"></script>
@@ -49,7 +49,7 @@ if (true) {
 				editable: false,
 				map:map
 			});
-			
+
 			var position = new google.maps.LatLng(51.5243842, -0.094736);
 			
 			marker=new google.maps.Marker({map:map, optimized: false, icon:character});
@@ -59,8 +59,8 @@ if (true) {
 					moveMarker(map, marker, coords);
 				}, 200 * i, pathCoords[i]);
 			}
-			
-		
+
+
 		new google.maps.Marker({
         map:map,
         draggable:false,
@@ -70,7 +70,7 @@ if (true) {
     });
 		}
 
-		
+
 
 
 		function getDirections(map) {
@@ -102,16 +102,33 @@ if (true) {
 		<div id="map"></div>
 	</section>
 	<section class="inventory">
-	  <i class="backpack-icon"></i>
-	  <div class="item"></div>
-	  <div class="item"></div>
-	  <div class="item"></div>
+	  <div class="item title">
+	  	<i class="icon-backpack"></i>
+	  </div>
+	  <div class="item">
+	  	<i class="icon-book-2"></i>
+	  </div>
+	  <div class="item active">
+	  	<i class="icon-book-2"></i>
+	  </div>
+	  <div class="item">
+	  	<i class="icon-book-2"></i>
+	  </div>
 	</section>
 	<section class="chest">
-	  <i class="chect-icon"></i>
-	  <div class="item"></div>
-	  <div class="item"></div>
-	  <div class="item"></div>
+	  <div class="item title">
+	  	<i class="icon-treasure-chest-1"></i>
+	  </div>
+	  <div class="item">
+	  	<i class="icon-book-2"></i>
+	  </div>
+	  <div class="item">
+	  	<i class="icon-bicycle"></i>
+	  </div>
+
+	  <div class="item">
+	  	<i class="icon-book-2"></i>
+	  </div>
 	</section>
 </body>
 </html>
