--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>Pricing for LDN</title>
+	<title>Fruitmonster</title>
 	<meta name="description" content="Fruitmonsters">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
@@ -51,7 +51,7 @@ if (true) {
 			});
 
 			var position = new google.maps.LatLng(51.5243842, -0.094736);
-			
+
 			marker=new google.maps.Marker({map:map, optimized: false, icon:character});
 			for (i = 0; i < pathCoords.length; i++) {
 				setTimeout(function(coords) {
@@ -77,7 +77,7 @@ if (true) {
 			var directionsService = new google.maps.DirectionsService();
 
 			var start = new google.maps.LatLng(51.5283026, -0.0819007);
-			
+
 			var end = probability;
 
 			var request = {
@@ -107,27 +107,29 @@ if (true) {
 	  </div>
 	  <div class="item">
 	  	<i class="icon-book-2"></i>
-	  </div>
-	  <div class="item active">
-	  	<i class="icon-book-2"></i>
+	  	<p>Adapt your driving</p>
 	  </div>
 	  <div class="item">
-	  	<i class="icon-book-2"></i>
+	  </div>
+	  <div class="item">
 	  </div>
 	</section>
 	<section class="chest">
 	  <div class="item title">
 	  	<i class="icon-treasure-chest-1"></i>
 	  </div>
-	  <div class="item">
+	  <div class="item active">
 	  	<i class="icon-book-2"></i>
+	  	<p>Adapt your driving</p>
 	  </div>
 	  <div class="item">
 	  	<i class="icon-bicycle"></i>
+	  	<p>Bike</p>
 	  </div>
 
 	  <div class="item">
 	  	<i class="icon-book-2"></i>
+	  	<p>White diagonal stripes</p>
 	  </div>
 	</section>
 </body>
