adds detail page

--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@ if (false) {
 	  </div>
 	  <div class="item active">
 	  	<i class="icon-book-2"></i>
-	  	<p>Adapt your driving</p>
+	  	<a href="detail.html">
+	  		<p>Adapt your driving</p>
+	  	</a>
 	  </div>
 	  <div class="item">
 	  	<i class="icon-bicycle"></i>
