Add data subject

--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@ if (false) {
 	  	<i class="icon-treasure-chest-1"></i>
 	  </div>
 	  <div class="item active">
-	  	<i class="icon-book-2"></i>
+	  	<i data-subject="adapt" class="icon-book-2"></i>
 	  	<a href="detail.html">
 	  		<p>Adapt your driving</p>
 	  	</a>
 	  </div>
 	  <div class="item">
-	  	<i class="icon-bicycle"></i>
+	  	<i data-subject="speed" class="icon-bicycle"></i>
 	  	<p>Bike</p>
 	  </div>
 
 	  <div class="item">
-	  	<i class="icon-book-2"></i>
+	  	<i data-subject="stripes" class="icon-book-2"></i>
 	  	<p>White diagonal stripes</p>
 	  </div>
 	</section>
