--- a/detail.html
+++ b/detail.html
@@ -10,9 +10,12 @@
   <link href="https://fontastic.s3.amazonaws.com/oN5BsuNjKX9ATMYd8V3hJc/icons.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="details">
   <section class="top">
-    <i class="icon-arrow-13"></i>
+    <a href="index.html">
+      <i class="icon-arrow-13"></i>
+    </a>
+    <br/>
     <i class="center icon-book-2"></i>
   </section>
   <section class="description">
@@ -24,6 +27,13 @@
     </p>
   </section>
   <section class="stats"></section>
-
+    <div class="item active">
+      <i data-subject="adapt" class="icon-skull-2"></i>
+      <p>Safety +10</p>
+    </div>
+    <div class="item active">
+      <i data-subject="adapt" class="icon-rocket"></i>
+      <p>Speed -5</p>
+    </div>
 </body>
 </html>
