adds animate css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Fruitmonsters">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="animate.css">
 	<link href="https://fontastic.s3.amazonaws.com/oN5BsuNjKX9ATMYd8V3hJc/icons.css" rel="stylesheet">
 
 <script src="inventory.js"></script>
