--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@ if (false) {
 </head>
 <body>
 	<section class="map">
+		<div class="notice">
+			<h1>You were driving too fast on a country lane</h1>
+			<h1>You didn't slow down for an unmarked junction</h1>
+			<h1>-10 gold</h1>
+		</div>
 		<div id="map"></div>
+
 	</section>
 	<section class="inventory">
 	  <div class="item title">
