--- a/1ndex.html
+++ b/1ndex.html
@@ -124,8 +124,7 @@ if (false) {
 <body>
 	<section class="map">
 		<div class="notice">
-			<h1>You were driving too fast on a country lane</h1>
-			<h1>You didn't slow down for an unmarked junction</h1>
+			<h1>You were driving too fast</h1>
 			<h1>-10 gold</h1>
 		</div>
 		<div id="map"></div>
@@ -135,11 +134,9 @@ if (false) {
 	  <div class="item title">
 	  	<i class="icon-backpack"></i>
 	  </div>
-	  <!-- <div class="item">
+	   <div class="item">
 	  	<i class="icon-book-2"></i>
 	  	<p>Adapt your driving</p>
-	  </div>-->
-	  <div class="item">
 	  </div>
 	  <div class="item">
 	  </div>
@@ -152,13 +149,15 @@ if (false) {
 	  </div>
 	  <div class="item active">
 	  	<i data-subject="adapt" class="icon-book-2"></i>
-	  	<a href="detail2.html">
+	  	<a href="detail.html">
 	  		<p>Adapt your driving</p>
 	  	</a>
 	  </div>
 	  <div class="item active">
 	  	<i data-subject="speed" class="icon-car-3"></i>
-	  	<p>30mph</p>
+	  	<a href="detail.html">
+	  		<p>30mph</p>
+	  	</a>
 	  </div>
 
 	  <div class="item">
