--- a/detail2.html
+++ b/detail2.html
@@ -12,18 +12,18 @@
 </head>
 <body class="details">
   <section class="top">
-    <a href="1nd3x.html">
+    <a href="1ndex.html">
       <i class="icon-arrow-13"></i>
     </a>
     <br/>
-    <i class="center icon-car-3"></i>
+    <i class="center icon-book-2"></i>
   </section>
   <section class="description">
     <h1>
-      Decrease your speed (30mph)
+      Adapt your driving
     </h1>
     <p>
-      Stick to the speed limit in 30mph zones.
+      In side roads and country lanes look out for unmarked junctions where nobody has priority
     </p>
   </section>
   <section class="stats"></section>
