--- a/1ndex.html
+++ b/1ndex.html
@@ -58,9 +58,11 @@ if (false) {
 			var checkvisible =  false;
 
 			$(".notice").show()}, 8200);
+			
 
 			var position = new google.maps.LatLng(51.5243842, -0.094736);
 			var positionhome = new google.maps.LatLng(51.5256702, -0.087561);
+			var positiongold =new google.maps.LatLng(51.5283026, -0.0819007);
 
 			marker =new google.maps.Marker({map:map, optimized: false, visible:checkvisible, icon:character});
 
@@ -90,6 +92,13 @@ if (false) {
         animation: google.maps.Animation.DROP,
         position: positionhome,
         icon: "home.png"
+    });
+    new google.maps.Marker({
+        map:map,
+        draggable:false,
+        animation: google.maps.Animation.DROP,
+        position: positiongold,
+        icon: "gold.png"
     });
 		}
 
