shows success scren

--- a/1ndex.html
+++ b/1ndex.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>Fruitmonster</title>
+	<title>Gold Dash</title>
 	<meta name="description" content="Fruitmonsters">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
@@ -58,7 +58,7 @@ if (false) {
 			var checkvisible =  false;
 
 			$(".notice").show()}, 8200);
-			
+
 
 			var position = new google.maps.LatLng(51.5243842, -0.094736);
 			var positionhome = new google.maps.LatLng(51.5256702, -0.087561);
