--- a/1nd3x.html
+++ b/1nd3x.html
@@ -3,13 +3,14 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>Fruitmonster</title>
+	<title>Gold Dash</title>
 	<meta name="description" content="Fruitmonsters">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="stylesheet" href="animate.css">
 	<link href="https://fontastic.s3.amazonaws.com/oN5BsuNjKX9ATMYd8V3hJc/icons.css" rel="stylesheet">
-
+	<script src="http://code.jquery.com/jquery-latest.min.js"
+        type="text/javascript"></script>
 <script src="inventory.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=geometry"></script>
 	<script>
@@ -57,7 +58,7 @@ if (true) {
 			setTimeout(function () {
 			var checkvisible =  false;
 
-			$(".success").show()}, 1000
+			$(".success").show()}, 6500
 			);
 
 
@@ -94,7 +95,7 @@ if (true) {
         position: positionhome,
         icon: "home.png"
     });
-    
+
     new google.maps.Marker({
         map:map,
         draggable:false,
@@ -136,7 +137,7 @@ if (true) {
 	<section class="map">
 		<div class="success">
 			<h1>Congratulations, you drove carefully and kept within the speed limit!</h1>
-			
+
 			<h1>+10 gold</h1>
 		</div>
 		<div id="map"></div>
