--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>Fruitmonster</title>
+	<title>Gold Dash</title>
 	<meta name="description" content="Fruitmonsters">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
@@ -92,8 +92,8 @@ if (false) {
         position: positionhome,
         icon: "home.png"
     });
-		
-		
+
+
 		new google.maps.Marker({
         map:map,
         draggable:false,
@@ -101,7 +101,7 @@ if (false) {
         position: positiongold,
         icon: "gold.png"
     });
-		
+
 
 };
 
